update css button add to cart

--- a/wp-content/themes/mystile/lang/en_GB.po
+++ b/wp-content/themes/mystile/lang/en_GB.po
@@ -1271,7 +1271,7 @@ msgstr ""
 #: includes/theme-functions.php:268
 #@ woothemes
 msgid "Related Posts:"
-msgstr ""
+msgstr "Tin liên quan"
 
 #: includes/theme-functions.php:290
 #@ woothemes
